# mcf-simplex-analyzer

./: .gitignore  .gitmodules  README.md  build.py  default.nix  download_instances.py  overrides.nix  pyproject.toml  shell.nix
mcf_glpk/: .clang-format  .gitignore  CMakeLists.txt
mcf_glpk/libs/: README.md
mcf_glpk/libs/Graph/: CMakeLists.txt  Graph.C
mcf_glpk/libs/Graph/include/Graph/: Graph.h
mcf_glpk/src/: convert.cpp  main.cpp  mcfglpk.cpp
notebooks/: :memory  FractionArray_numpy_interface.ipynb  GLPK.benchmark  GLPKexact.benchmark  LP_Model.ipynb  MCF_Instances_format_description.ipynb  MCF_LP_Problem_Formulation.ipynb  Max_flow.ipynb  Sage_Simplex.ipynb  Study_attr_library.ipynb  The_Revised_Simplex_Algorithm.ipynb  The_Simplex_algorithm.ipynb  The_Standard_Simplex_Algorithm.ipynb  Untitled.ipynb  Updating_triangular_factorization.ipynb  restats
notebooks/example/: dummy.arc  dummy.nod  dummy.sup  grid.arc  grid.mut  grid.nod  grid.sup  pds.arc  pds.mut  pds.nod  pds.sup  planar.arc  planar.lp  planar.mps  planar.mut  planar.nod  planar.sup
src/mcf_simplex_analyzer/: cli.py  formulate.py  fractionarray.py  load_instance.py  simplex.py
src/mcf_simplex_analyzer/fractionarray/: __init__.py  _fractionarray.py  _utils.py  sparse.py
src/mcf_simplex_analyzer/simplex/: __init__.py  _model.py  _revised_simplex.c  _revised_simplex.py  _revised_simplex.pyx  _standard_simplex.py  decision_rules.py  simplex.py
src/mcf_simplex_analyzer/simplex/tests/: test_revised_simplex.py  test_standard_simplex.py
src/mcf_simplex_analyzer/tests/: test_fractionarray.py  test_revised_simplex.py  test_simplex.py
thesis/: metadata.tex
thesis/draft/: thesis.md
thesis/draft/img/: feasible_region.ipe
thesis/draft/network_flows/: max_flow.md  mcf.md  mmcf.md
thesis/draft/simplex_algorithm/: computational_form.md  how_to_solve_lp_problems.md  pivoting_rules.md  simplex_algorithm_overview.md
thesis/draft/simplex_algorithm/revised_simplex/: matrix_description.md  revised_simplex.md
thesis/draft/simplex_algorithm/standard_simplex/: standard_simplex.md
thesis/draft/simplex_algorithm_overview/: how_to_solve_lp_problems.md  simplex_algorithm_overview.md
