[tool.poetry]
name = "mcf-simplex-analyzer"
version = "0.1.0"
description = "Analyzer of the simplex algorithm for the Multi-commodity flow problem"
authors = ["David Kubek <david.kubek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.2"
numba = "^0.53.1"
jupyterlab = "^3.0.14"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"
pylint = "^2.8.0"

[tool.black]
line_width = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
